--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+
+body {
+  background-color: #293268;
+  color: white;
+  font-family: 'Work Sans', sans-serif;
+  text-align: center;
+  
+  margin: 0;
+}
+
+#title {
+  border-bottom: 2px solid darkgray;
+  padding: 5px;
+  margin-bottom: 50px;
+  width: 1000px;
+  
+  margin: auto;
+}
+
 .break {
   border-bottom: 2px solid darkgray;
   margin: 50px;
