--- a/style.css
+++ b/style.css
@@ -1,64 +1,40 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+:root {
+  --white: #d3d1d1;
+  --gray: #161616;
+  --red: #ff4532;
+  --green: #79b199;
+  --peach-1: #AD8174;
+  --peach-2: #917164;
+}
+
+@keyframes bgAnim {
+  0% {
+    background-position: 0px 0px;
+  }
+
+  100% {
+    background-position: 0px -512px;
+  }
+}
 
 body {
-  background-color: #293268;
-  color: white;
-  font-family: 'Work Sans', sans-serif;
-  text-align: center;
-  
-  margin: 0;
+  background-color: var(--gray);
+
+  font-family: 'Montserrat', sans-serif;
 }
 
 #title {
-  border-bottom: 2px solid darkgray;
-  padding: 5px;
-  margin-bottom: 50px;
-  width: 1000px;
-  
-  margin: auto;
-}
-
-.break {
-  border-bottom: 2px solid darkgray;
-  margin: 50px;
-}
-
-h1, h2 {
-  margin: 5px;
-}
-
-img {
-  border: 5px solid #12173d;
-}
-
-/* Add a black background color to the top navigation */
-.topnav {
-  background-color: #12173d;
-  overflow: hidden;
-  position: fixed;
-  width: 100%;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: left;
-  color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  
-  transition: 0.3s;
+  margin: 3em;
 }
 
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #909edd;
-  color: #12173d;
+#title>h1 {
+  font-size: 5vw;
+  color: var(--red);
+  margin: 0;
 }
 
-/* Add a color to the active/current link */
-.topnav a.active {
-  background-color: #22896e;
-  color: white;
+#title>p {
+  font-size: 1.2vw;
+  color: var(--white);
 }
